[gd_scene load_steps=8 format=3 uid="uid://k3rcfpvnmpu6"]

[ext_resource type="Script" path="res://bat/bat.gd" id="1_lgy4k"]
[ext_resource type="Texture2D" uid="uid://dvdkwxbwqy4x" path="res://bat/bat.png" id="1_u637d"]
[ext_resource type="Texture2D" uid="uid://ca71nfyadvfua" path="res://player/light.png" id="2_lk07v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wbkwh"]
radius = 6.0

[sub_resource type="Animation" id="Animation_dwhh3"]
resource_name = "Fly"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 3]
}

[sub_resource type="Animation" id="Animation_j5dan"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7tfye"]
_data = {
"Fly": SubResource("Animation_dwhh3"),
"RESET": SubResource("Animation_j5dan")
}

[node name="Bat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_lgy4k")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("1_u637d")
offset = Vector2(0, 12)
hframes = 7

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wbkwh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7tfye")
}

[node name="PointLight2d" type="PointLight2D" parent="."]
energy = 0.5
shadow_enabled = true
texture = ExtResource("2_lk07v")
texture_scale = 0.25

[node name="LeftWorldCheck" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(-128, 0)

[node name="RightWorldCheck" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(128, 0)

[node name="UpWorldCheck" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(0, -128)

[node name="DownWorldCheck" type="RayCast2D" parent="."]
exclude_parent = false
target_position = Vector2(0, 128)
